--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.2.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "nestjs-typeorm-paginate": "^4.0.4",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
